--- a/resources/lang/en_US.json
+++ b/resources/lang/en_US.json
@@ -90,7 +90,7 @@
     "Användarmanual": "User manual",
     "Administratörsmanual": "Administration manual",
     "Intern manual": "Internal manual",
-    "Om Evikomp": "About Evikomp",
+    "Om CASE": "About CASE",
     "Video-ID": "Video ID",
     "Pod (ljudfil)": "Pod (audio file)",
     "Office-fil (Word, Excel, Powerpoint)": "Office file (Word, Excel, Powerpoint)",
